[gd_scene load_steps=2 format=3 uid="uid://xss4d30ho6ir"]

[ext_resource type="Script" uid="uid://c418ic3cxq5c2" path="res://chapter/character_block.gd" id="1_b58qe"]

[node name="CharacterBlock" type="HBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_b58qe")

[node name="ColorRect" type="ColorRect" parent="."]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(10, 0)
layout_mode = 2
color = Color(0, 0, 0, 1)

[node name="NameLabel" type="Label" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Name"

[node name="NameInput" type="LineEdit" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(70, 0)
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Character name"
expand_to_text_length = true

[node name="SaveButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[node name="StoryEdButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "Edit"

[node name="SelectAllButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Select all"
text = "SelAll"

[node name="DelButton" type="Button" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
tooltip_text = "Delete character from chapter"
text = "Del"

[node name="PresentSwitch" type="CheckButton" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
button_pressed = true
text = "Use"

[connection signal="text_submitted" from="NameInput" to="." method="_on_name_input_text_submitted"]
[connection signal="pressed" from="SaveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="StoryEdButton" to="." method="_on_story_ed_button_pressed"]
[connection signal="pressed" from="SelectAllButton" to="." method="_on_select_all_button_pressed"]
[connection signal="pressed" from="DelButton" to="." method="_on_del_button_pressed"]
[connection signal="toggled" from="PresentSwitch" to="." method="_on_present_switch_toggled"]
